--- a/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/consulta.html
+++ b/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/consulta.html
@@ -17,11 +17,12 @@
     <!-- CSS -->
     <link href="./css/estilo.css" rel="styleSheet">
 
+    <!-- js -->
+    <script src="js/app.js"></script>
+
 	</head>
 
   <body>
-
-
     <nav class="navbar navbar-expand-lg navbar-dark backgroundColor mb-5">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -54,14 +55,14 @@
 
       <div class="row mb-2">
         <div class="col-md-2">
-          <select class="form-control" id="ano">
+          <select class="formInput" id="ano">
             <option value="">Ano</option>
             <option value="2018">2018</option>
           </select>
         </div>
 
         <div class="col-md-2">
-          <select class="form-control" id="mes">
+          <select class="formInput" id="mes">
             <option value="">Mês</option>
             <option value="1">Janeiro</option>
             <option value="2">Fevereiro</option>
@@ -79,11 +80,11 @@
         </div>
         
         <div class="col-md-2">
-          <input type="text" class="form-control" placeholder="Dia" id="dia" />
+          <input type="text" class="formInputText" placeholder="Dia" id="dia" />
         </div>
 
         <div class="col-md-6">
-          <select class="form-control" id="tipo">
+          <select class="formInput" id="tipo">
             <option>Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
@@ -96,11 +97,11 @@
 
       <div class="row  mb-5">
         <div class="col-md-8">
-          <input type="text" class="form-control" placeholder="Descrição" id="descricao" />
+          <input type="text" class="formInputText" placeholder="Descrição" id="descricao" />
         </div>
 
         <div class="col-md-2">
-          <input type="text" class="form-control" placeholder="Valor" id="valor" />
+          <input type="text" class="formInputText" placeholder="Valor" id="valor" />
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
