--- a/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/index.html
+++ b/2021.2/Programação Web/Exercícios_práticos/Lista1_parte5/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 	<head>
         <meta charset="utf-8" />
 		<title>Orçamento pessoal</title>
@@ -15,6 +16,9 @@
 
         <!-- css -->
         <link href="./css/estilo.css" rel="styleSheet">
+
+        <!-- js -->
+        <script src="js/app.js"></script>
 
 	</head>
 
@@ -54,7 +58,8 @@
                 <div class="col-md-2">
                     <select class="formInput" id="ano">
                         <option value="">Ano</option>
-                        <option value="2018">2018</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
                     </select>
                 </div>
 
@@ -82,7 +87,7 @@
 
                 <div class="col-md-6">
                     <select class="formInput" id="tipo">
-                        <option>Tipo</option>
+                        <option value="">Tipo</option>
                         <option value="1">Alimentação</option>
                         <option value="2">Educação</option>
                         <option value="3">Lazer</option>
@@ -102,7 +107,7 @@
                 </div>
 
                 <div class="col-md-2 d-flex justify-content-end">
-                    <button type="button" class="btn btn-dak">
+                    <button type="button" class="btn btn-dak" onclick="cadastrarDespesa()">
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
